<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.puchkovav.vizitpasswordgenerator.MainActivity">

    <!--поле с кодом и кнопка NEXT-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0">

        <TextView
            android:id="@+id/currentCodeView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/defaultCodeFieldValue"
            android:textSize="28sp"
            android:background="@drawable/frame"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="3"/>

        <Button
            android:id="@+id/nextCodeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonNext"
            android:textSize="24sp"
            android:padding="20dp"
            android:onClick="onClickNextCodeButton"
            android:layout_weight="1"/>
    </LinearLayout>

    <!--разделитель-->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"/>

    <LinearLayout
        android:id="@+id/counterAndLogCaptoinId"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        >

        <!--счетчик-->
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/labelCounter" />

            <TextView
                android:id="@+id/counterValueView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="0"/>
        </LinearLayout>

        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labelLog"/>
    </LinearLayout>

    <!--список последних кодов (лог)-->
    <ListView
        android:id="@+id/logListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:layout_weight="1">
    </ListView>

    <!--разделитель-->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"/>

    <!--подсказка-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="0">

        <TextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:layout_marginRight="5dp"
            android:text="@string/labelSmallManual"
            />

        <Button
            android:id="@+id/resetButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonReset"
            android:textSize="24sp"
            android:padding="20dp"
            android:layout_weight="0"
            android:onClick="onClickResetButton"/>

    </LinearLayout>

</LinearLayout>
